packages/mdc-textfield/_mixins.scss
/* ... */
///
/// Sets density scale for outlined text field (Excluding outlined text field with leading icon).
///
/// @param {Number | String} $density-scale - Density scale value for component. Supported density scale values `-4`,
///     `-3`, `-2`, `-1`, `0`. Default is `0`.
///
@mixin mdc-text-field-outlined-density($density-scale) {
  $height: mdc-density-prop-value(
    $density-config: $mdc-text-field-density-config,
    $density-scale: $density-scale,
    $property-name: height,
  );

  @include mdc-text-field-outlined-height($height);
}

///
/// Sets density scale for outlined text field with leading icon.
///
/// @param {Number | String} $density-scale - Density scale value for component. Supported density scale values `-4`,
///     `-3`, `-2`, `-1`, `0`. Default is `0`.
///
@mixin mdc-text-field-outlined-with-leading-icon-density($density-scale) {
  $height: mdc-density-prop-value(
    $density-config: $mdc-text-field-density-config,
    $density-scale: $density-scale,
    $property-name: height,
  );

  @include mdc-text-field-outlined-with-leading-icon-height($height);
}

///
/// Sets height of default text field variant.
///
/// @param {Number} $height
/// @access public
///
@mixin mdc-text-field-height($height) {
  height: $height;
}

///
/// Sets height of outlined text field variant (Excluding outlined text field with leading icon).
///
/// @param {Number} $height
/// @access public
///
@mixin mdc-text-field-outlined-height($height) {
  $keyframe-suffix: text-field-outlined-#{$height};
  $positionY: mdc-text-field-get-outlined-label-position-y($height);

  @include mdc-notched-outline-floating-label-float-position-absolute($positionY);

  @at-root {
    @include mdc-floating-label-shake-keyframes($keyframe-suffix, $positionY);
  }

  @include mdc-floating-label-shake-animation($keyframe-suffix);
  @include mdc-text-field-height($height);
}

///
/// Sets height of outlined text field with leading icon variant.
///
/// @param {Number} $height
/// @access public
///
@mixin mdc-text-field-outlined-with-leading-icon-height($height) {
  $keyframe-suffix: text-field-outlined-with-leading-icon-#{$height};
  $positionY: mdc-text-field-get-outlined-label-position-y($height);

  // For specificity
  &.mdc-text-field--outlined {
    @include mdc-notched-outline-floating-label-float-position-absolute($positionY, 32px);
  }

  @at-root {
    @include mdc-floating-label-shake-keyframes(
      $keyframe-suffix,
      $positionY,
      $mdc-text-field-outlined-with-leading-icon-label-position-x
    );
  }

  @include mdc-floating-label-shake-animation($keyframe-suffix);

  $keyframe-suffix-rtl: #{$keyframe-suffix}-rtl;

  @at-root {
    @include mdc-floating-label-shake-keyframes(
      $keyframe-suffix-rtl,
      $positionY,
      -$mdc-text-field-outlined-with-leading-icon-label-position-x
    );
  }

  @include mdc-rtl {
    @include mdc-floating-label-shake-animation($keyframe-suffix);
  }

  @include mdc-text-field-height($height);
}

///
/// Sets shape radius of default text field variant.
///
/// @param {Number} $radius Shape radius value in `px` or in percentage.
/// @param {Number} $text-field-height Height of default text field variant. Required only when `$radius` is in
///     percentage unit and if text field has custom height. Defaults to `$mdc-text-field-height`.
/// @param {Boolean} $rtl-reflexive Set to true to flip shape radius in RTL context. Defaults to `false`.
///
@mixin mdc-text-field-shape-radius($radius, $text-field-height: $mdc-text-field-height, $rtl-reflexive: false) {
  @if length($radius) > 2 {
    @error "Invalid radius: '#{$radius}' component doesn't allow customizing all corners";
  }

  $masked-radius: mdc-shape-mask-radius($radius, 1 1 0 0);

  @include mdc-shape-radius(
    mdc-shape-resolve-percentage-radius($text-field-height, $masked-radius),
    $rtl-reflexive
  );
}

@mixin mdc-text-field-textarea-shape-radius($radius, $rtl-reflexive: false) {
  @include mdc-notched-outline-shape-radius($radius, $rtl-reflexive);
}

@mixin mdc-text-field-ink-color($color) {
  &:not(.mdc-text-field--disabled) {
    @include mdc-text-field-ink-color_($color);
  }
}

@mixin mdc-text-field-fill-color($color) {
  &:not(.mdc-text-field--disabled) {
    @include mdc-text-field-fill-color_($color);
  }
}

@mixin mdc-text-field-textarea-stroke-color($color) {
  &:not(.mdc-text-field--disabled) {
    @include mdc-text-field-textarea-stroke-color_($color);
  }
}

@mixin mdc-text-field-textarea-fill-color($color) {
  &:not(.mdc-text-field--disabled) {
    @include mdc-text-field-textarea-fill-color_($color);
  }
}

@mixin mdc-text-field-fullwidth-bottom-line-color($color) {
  &:not(.mdc-text-field--disabled) {
    @include mdc-text-field-fullwidth-bottom-line-color_($color);
  }
}

@mixin mdc-text-field-bottom-line-color($color) {
  &:not(.mdc-text-field--disabled):not(.mdc-text-field--outlined):not(.mdc-text-field--textarea) {
    @include mdc-text-field-bottom-line-color_($color);
  }
}

@mixin mdc-text-field-hover-bottom-line-color($color) {
  &:not(.mdc-text-field--disabled):not(.mdc-text-field--outlined):not(.mdc-text-field--textarea) {
    @include mdc-text-field-hover-bottom-line-color_($color);
  }
}

@mixin mdc-text-field-line-ripple-color($color) {
  &:not(.mdc-text-field--disabled) {
    @include mdc-text-field-line-ripple-color_($color);
  }
}

@mixin mdc-text-field-label-color($color) {
  &:not(.mdc-text-field--disabled) {
    @include mdc-text-field-label-ink-color_($color);
  }
}

@mixin mdc-text-field-outline-color($color) {
  &:not(.mdc-text-field--disabled) {
    @include mdc-notched-outline-color($color);
  }
}

@mixin mdc-text-field-hover-outline-color($color) {
  &:not(.mdc-text-field--disabled) {
    @include mdc-text-field-hover-outline-color_($color);
  }
}

@mixin mdc-text-field-focused-outline-color($color) {
  &:not(.mdc-text-field--disabled) {
    @include mdc-text-field-focused-outline-color_($color);
  }
}
/* ... */

